--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   hive: ^2.2.2
+  scrollable_positioned_list: ^0.3.8
   hive_flutter:
 
 dev_dependencies:
@@ -76,8 +77,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - splash.png
-      - google_fonts/
+      - assets/splash.png
+      - assets/google_fonts/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
